--- a/App/Views/login/register.html
+++ b/App/Views/login/register.html
@@ -8,9 +8,9 @@
                              <div class="form-group">
                                 <label for="inputName" class="control-label label-admission"><translate>Me quiero asociar como:</translate></label>
                                 <select class="form-control input-admission" id="inputAssociationType"  ng-model="user.associationType" required>
-                                <option value="">Seleccionar</option>
-                                <option value="Productor">Productor</option>
-                               </select>
+                                    <option value="">Seleccionar</option>
+                                    <option value="Productor">Productor</option>
+                                </select>
                             </div>
                           </div>
                            <div class="col-md-6">
@@ -28,13 +28,18 @@
                            <div class="col-md-6">
                              <div class="form-group">
                                 <label for="inputName" class="control-label label-admission"><translate>Tipo de documento</translate></label>
-                                <input type="text" class="form-control input-admission" id="inputDocumentType" placeholder="Cedula de ciudadania" ng-model="user.documentType" required>
+                                <select class="form-control input-admission" id="inputDocumentType"  ng-model="user.documentType" required>
+                                    <option value="">Seleccionar</option>
+                                    <option value="CC">Cédula de ciudadanía</option>
+                                    <option value="TI">Tarjeta de identidad</option>
+                                    <option value="CE">Cédula extranjera</option>
+                                </select>
                             </div>
                            </div>
                            <div class="col-md-6">
                              <div class="form-group">
-                                <label for="inputName" class="control-label label-admission"><translate>Numero de documento</translate></label>
-                                <input type="text" class="form-control input-admission" id="inputDocumentNumber" placeholder="123456789" ng-model="user.documentNumber" required>
+                                <label for="inputName" class="control-label label-admission"><translate>Número de documento</translate></label>
+                                <input type="number" class="form-control input-admission" id="inputDocumentNumber" placeholder="123456789" ng-model="user.documentNumber" required>
                             </div>
                            </div>
                            <div class="col-md-12">
@@ -57,13 +62,13 @@
                            </div>
                            <div class="col-md-12">
                              <div class="form-group">
-                                <label for="inputName" class="control-label label-admission"><translate>Telefono</translate></label>
+                                <label for="inputName" class="control-label label-admission"><translate>Teléfono</translate></label>
                                 <input type="text" class="form-control input-admission" id="inputPhoneNumber" placeholder="3002001010" ng-model="user.phoneNumber" required>
                              </div>
                            </div>
                             <div class="col-md-6">
                               <div class="form-group">
-                                <label for="inputName" class="control-label label-admission"><translate>Direccion</translate></label>
+                                <label for="inputName" class="control-label label-admission"><translate>Dirección</translate></label>
                                 <input type="text" class="form-control input-admission" id="inputAddress" placeholder="Carrera 8 # 18-39" ng-model="user.address" required>
                               </div>
                             </div>
@@ -82,7 +87,7 @@
                             <div class="col-md-6">
                               <div class="form-group">
                                 <label for="inputName" class="control-label label-admission"><translate>Zona</translate></label>
-                                <select name="user.zone" id="inputZone" class="form-control input-admission" required>
+                                <select ng-model="user.zone" id="inputZone" class="form-control input-admission" required>
                                   <option value="">Seleccionar</option>
                                   <option value="Urbano">Urbano</option>
                                   <option value="Rural">Rural</option>
