--- a/App/Views/Admin/main.html
+++ b/App/Views/Admin/main.html
@@ -1,8 +1,47 @@
-<button class="btn btn-success" ng-click="salir()">salir</button>
+<div class="container">
+    <div class="row">
+        <div class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                   <a ui-sref="admin">
+                       <img src="App/Public/img/Logo_Portada_Index.png" alt="imagen" style="height: 50px; margin: 0 50px; ma">
+                   </a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a ui-sref="admin.users">Usuarios</a></li>
+                        <li><a ui-sref="admin.parameters">Parámetros</a></li>
+                        <li><a ui-sref="admin.guide">Guías y tutoriales (Archivos)</a></li>
+                        <li></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><i class="fa fa-bell bell-user pull-right" aria-hidden="true"><span>1</span></i></li>
+                        <li class="dropdown">
+                            <img src="App/Public/img/Foto_De_Perfil.png" alt="{{name}}" style="height: 50px;border-radius: 50%;margin-top: 8px;cursor: pointer" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-click="funsions">
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li><a style="color: #000;font-weight: 600;" class="container-nick" >{{name}} <br><span style="font-weight: 100; font-size: 10px;">{{user.email}}</span></a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="" data-toggle="modal" data-target="#User">Perfil</a></li>
+                                <li><a href="" ng-click="logout()">Salir</a></li>
+                            </ul>
+                        </li>
+                    </ul>             
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <ui-view></ui-view>
+    </div>    
+</div>
+
+
+
+<!--<button class="btn btn-success" ng-click="salir()">salir</button>
 <button class="btn btn-info" ng-click="llamarDatos()">llamar datos</button>
 
 <ul class="list-group">
   <li class="list-group-item" ng-repeat="x in array">
       {{x.name}}
   </li>
-</ul>
+</ul>-->
