animaciones y estilos graficas

--- a/App/Views/Admin/main.html
+++ b/App/Views/Admin/main.html
@@ -4,7 +4,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                    <a ui-sref="admin">
-                       <img src="App/Public/img/Logo_Portada_Index.png" alt="imagen" style="height: 50px; margin: 0 50px; ma">
+                       <img src="App/Public/img/Logo_Portada_Index.png" alt="imagen" style="height: 50px; margin: 0 50px;">
                    </a>
                 </div>
                 <div class="collapse navbar-collapse">
