--- a/App/Views/Parameters/ph.html
+++ b/App/Views/Parameters/ph.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-8 col-md-offset-2">
         <div class="chart-container">
             <canvas id="LineChart" style="width: 100%"></canvas>
         </div>
