--- a/App/Views/main.html
+++ b/App/Views/main.html
@@ -102,8 +102,10 @@
          <div class="col-md-10">  
             <ui-view>
                <div class="row">
-                  <div class="col-md-12">
-                      <img src="App/Public/img/pecera.jpg" style="width: 500px;" class="img-responsive" alt="Responsive image">
+                  <div class="col-md-6 col-md-offset-3">
+                      <div class="embed-responsive embed-responsive-16by9" >
+                        <video class="embed-responsive-item" src="App/Public/img/Animaciones/1366.mp4" autoplay muted loop style="max-height: 450px"></video>
+                      </div>
                   </div> 
                   <div class="col-md-12">
                       <h2>Último hostorial</h2>
