Maquetación páginas admin (base)

--- a/App/Views/Admin/Parameters/parameter.html
+++ b/App/Views/Admin/Parameters/parameter.html
@@ -1,1 +1,43 @@
-Parámetros
+<div class="row">
+	<div class="col-md-2">
+		<button class="btn btn-success"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> nuevo</button>
+	</div>
+	<div class="col-md-10">
+		<div class="input-group">
+      		<input type="text" ng-model="filtro" class="form-control" placeholder="filtrar">
+      			<span class="input-group-btn">
+        			<button class="btn btn-default" type="button">Filtrar</button>
+      			</span>
+    	</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-12">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Nombre</th>
+					<th>Información</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span></a></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span></a></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span></a></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span></a></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
