--- a/App/Views/Admin/Guides/guide.html
+++ b/App/Views/Admin/Guides/guide.html
@@ -1,1 +1,55 @@
-guías y tutoriales
+<div class="row">
+	<div class="col-md-4">
+		<div class="row">
+			<p class="label label-default">Controles</p>
+		</div>
+		<div class="row">
+			<img src="App/Public/img/pdf.jpg" alt="PDF" class="img-rounded">
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="row">
+			<p class="label label-default">Lechuga</p>
+		</div>
+		<div class="row">
+			<img src="App/Public/img/pdf.jpg" alt="PDF" class="img-rounded">
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="row">
+			<p class="label label-default">Espinaca</p>
+		</div>
+		<div class="row">
+			<img src="App/Public/img/pdf.jpg" alt="PDF" class="img-rounded">
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="row">
+			<p class="label label-default">Acelga</p>
+		</div>
+		<div class="row">
+			<img src="App/Public/img/pdf.jpg" alt="PDF" class="img-rounded">
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="row">
+			<p class="label label-default">Cilantro</p>
+		</div>
+		<div class="row">
+			<img src="App/Public/img/pdf.jpg" alt="PDF" class="img-rounded">
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="row">
+			<p class="label label-default">Apio</p>
+		</div>
+		<div class="row">
+			<img src="App/Public/img/pdf.jpg" alt="PDF" class="img-rounded">
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-12">
+		<button class="btn btn-success center-block" style="height: 100px; width: 100px; border-radius: 50%; margin: 100px"><span class="glyphicon glyphicon-plus"></span></button>
+	</div>
+</div>
