--- a/App/Views/Admin/Users/user.html
+++ b/App/Views/Admin/Users/user.html
@@ -20,6 +20,96 @@
 				</tr>
 			</thead>
 			<tbody>
+			    <tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
+				<tr>
+					<td>Ejemplo</td>
+					<td>Ejemplo</td>
+					<td><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a></td>
+					<td><span class="label label-primary">Esperando</span></td>
+				</tr>
 				<tr>
 					<td>Ejemplo</td>
 					<td>Ejemplo</td>
