--- a/App/Public/css/common.css
+++ b/App/Public/css/common.css
@@ -47,7 +47,7 @@
   }
 }
 
-@media screen and (min-width: 768px){
+@media (min-width: 768px){
   .container .jumbotron, .container-fluid .jumbotron {
       padding-right: 30px;
       padding-left: 30px;
