--- a/App/Views/Admin/main.html
+++ b/App/Views/Admin/main.html
@@ -1,22 +1,61 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand unpadding" ui-sref="admin" style="padding-top: 5px; padding-left: 30px;"><img src="App/Public/img/Loco_Cabecera_Pequeno.png" alt="Ecolgreen" class="logotipo" style="max-height: 56px;"></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+      </ul>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li><i class="fa fa-bell bell-user pull-right" aria-hidden="true"><span>1</span></i></li>
+        <li class="dropdown">
+          <img src="App/Public/img/Foto_De_Perfil.png" alt="{{name}}" style="max-height: 50px;border-radius: 50%;margin-top: 8px;cursor: pointer" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-click="funsions">
+          <ul class="dropdown-menu dropdown-menu-right">
+<!--
+            <li><a style="color: #000;font-weight: 600;" class="container-nick" >{{name}} <br><span style="font-weight: 100; font-size: 10px;">{{user.email}}</span></a></li>
+            <li role="separator" class="divider"></li>
+-->
+<!--            <li><a href="" data-toggle="modal" data-target="#User">Perfil</a></li>-->
+            <li><a href="" ng-click="logout()">Salir</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+  <div class="col-md-3 col-xs-3" style="position: fixed;">
+  	<div class="row">
+			<nav class="navbar navbar-green"style="height: 100vh;">
+					<div class="container-fluid">
+							<div class="navbar-header">
+									
+							</div>
+						</div>
+						<ul class="nav nav-pills nav-stacked" >
+								<li style="padding: 5px;padding-top: 95px;">
+										<img src="App/Public/img/Foto_De_Perfil.png" alt="{{name}}" style="width:40%; margin-top: 25px;cursor: pointer;margin: auto;display: block" >
+								</li>
+								<li><p class="text-center">Administrador Administrador Administrador</p></li>
+								<li><a ui-sref="admin.users" class="text-center">Usuarios</a></li>
+								<li><a ui-sref="admin.parameters" class="text-center">Parámetros</a></li>
+								<li><a ui-sref="admin.guide" class="text-center">Guías y tutoriales (Archivos)</a></li>
+						</ul>
+				</nav>
+			</div>
+		</div>
 <div class="container">
 	<div class="row">
-    	<div class="col-md-3">
-        	<nav class="navbar navbar-default">
-            	<div class="container-fluid">
-                	<div class="navbar-header">
-                  		<a class="navbar-brand" href="#">
-                    		<img alt="Ecolgreen" src="App/Public/img/Logo_Portada_Index.png"  style="height: 50px; margin: 0 50px;">
-                  		</a>
-                	</div>
-              	</div>
-              	<ul class="nav nav-pills nav-stacked">
-                  	<li><a ui-sref="admin.users">Usuarios</a></li>
-                  	<li><a ui-sref="admin.parameters">Parámetros</a></li>
-                  	<li><a ui-sref="admin.guide">Guías y tutoriales (Archivos)</a></li>
-              	</ul>
-           	</nav>
-       	</div>
-       	<div class="col-md-9">
+       	<div class="col-md-9 col-md-offset-3 col-xs-12" style="margin-bottom: 25px; margin-top: 65px;">
 			<div style="margin-top: 20px"></div>
 			<ui-view></ui-view>
 		</div>
