--- a/App/Views/Admin/main.html
+++ b/App/Views/Admin/main.html
@@ -45,8 +45,9 @@
 								<li style="padding: 5px;padding-top: 95px;">
 										<img src="App/Public/img/Foto_De_Perfil.png" alt="{{name}}" style="width:40%; margin-top: 25px;cursor: pointer;margin: auto;display: block" >
 								</li>
-								<li><p class="text-center">Administrador Administrador Administrador</p></li>
+								<li><p class="text-center">Administrador</p></li>
 								<li><a ui-sref="admin.users" class="text-center">Usuarios</a></li>
+								<li><a ui-sref="admin.modules" class="text-center">Módulos</a></li>
 								<li><a ui-sref="admin.parameters" class="text-center">Parámetros</a></li>
 								<li><a ui-sref="admin.guide" class="text-center">Guías y tutoriales (Archivos)</a></li>
 						</ul>
