--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -36,13 +36,13 @@
               <div class="col-md-12">
                   <div class="form-group">
                       <label for="inputEmail" class="control-label" style="font-size: 20px; color:#0094CB"><translate>Correo</translate></label>
-                      <input type="email" class="form-control input-admission" id="inputEmailLogin" placeholder="example@example.com" ng-model="user.email" required>
+                      <input type="email" class="form-control input-admission" id="inputEmailLogin" placeholder="example@example.com" ng-model="auth.email" required>
                   </div>
               </div>
               <div class="col-md-12">
                   <div class="form-group">
                       <label for="inputPassword" class="control-label" style="font-size:20px;color:#0094CB"><trasnlate>Contraseña</trasnlate></label>
-                      <input type="password" class="form-control input-admission" id="inputPasswordLogin" ng-model="user.password" placeholder="***********" required>
+                      <input type="password" class="form-control input-admission" id="inputPasswordLogin" ng-model="auth.password" placeholder="***********" required>
                   </div>
                   <a class="" href="" style="font-size: 14px; color: #0094CB;">¿Olvidaste tu contraseña?</a>
               </div>
