--- a/App/Views/Admin/Parameters/new.html
+++ b/App/Views/Admin/Parameters/new.html
@@ -78,11 +78,11 @@
 			</div>
 			<div class="col-md-2">
 				<label for=""><translate>Min</translate></label>
-				<input type="number" ng-model="parameter.electroconductivity.min" min="0" class="form-control">
+				<input type="number" ng-model="parameter.electroconductivity.min" min="0" step="0.1" class="form-control">
 			</div>
 			<div class="col-md-2">
 				<label for=""><translate>Max</translate></label>
-				<input type="number" ng-model="parameter.electroconductivity.max" min="0" class="form-control">
+				<input type="number" ng-model="parameter.electroconductivity.max" min="0" step="0.1" class="form-control">
 			</div>
 			<div class="col-md-1">
 				<label for=""><translate>medida</translate></label>
